--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/H-Choyoung/PRACTICE3#readme",
   "dependencies": {
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
-    "react-cli": "^0.3.1"
+    "react-cli": "^0.3.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
