--- a/221212_webpack_prac/tsconfig.json
+++ b/221212_webpack_prac/tsconfig.json
@@ -2,11 +2,11 @@
   "compilerOptions": {
     "outDir": "./dist",
     "target": "es5",
-    "module": "ESNext",
+    "module": "esnext",
     "jsx": "react-jsx",
     "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
